# ssc

./: .clang-format  .gitignore  .gitmodules  AUTHORS  ChangeLog  IDEAS  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  ssc.conf  ssc.spec  ssc.spec.in
data/: Makefile  Makefile.am  Makefile.in
scripts/: acinclude.m4
src/: BUILD  Makefile  Makefile.am  Makefile.in  asteroid.cc  asteroid.h  audio.cc  audio.h  blackhole.cc  blackhole.h  bogey.cc  bogey.h  camera.cc  camera.h  common.h  compile.sh  config.cc  config.h  control.cc  control.h  coord.cc  coord.h  damage.cc  draw.h  explode.h  fatso.cc  fatso.h  flock.cc  flock.h  font.cc  font.h  fuzzy.h  game.cc  game.h  geom.cc  geom.h  global.cc  global.h  glpng.h  graph.cc  (+32 more)
support/: Makefile  Makefile.am  Makefile.in  README
