TTF_FONTS = \
	Vera.ttf

#	dnahand.ttf \
#	doves.ttf \
#	guildof.ttf \
#	metalang.ttf \
#	px10.ttf \
#	thisprty.ttf

SOUNDS = \
	trance.wav \
	boom.wav \
	exploBig.wav \
	exploPop.wav \
	life_lose.wav \
	power.wav

TEXTURES = \
	astr.png \
	ast.png

pkgdata_DATA = $(TTF_FONTS) $(SOUNDS) $(TEXTURES)

EXTRA_DIST = $(pkgdata_DATA)
